* Fixed incorrect SPCC filter plots in "Plot All" in narrowband mode (#1691)
* Fixed an issue where starnet was not updating a data structure that sirilpy get_image_fits_header() relied on
* Fixed an issue where shared memory was not being released correctly after use until a python script exited (#1700)

**Improvements**
* Removed legacy GraXpert interface to be replaced by the new GraXpert-AI.py script (#1620, #1611, #1573)
* Allow saving plots to files using sirilpy.connection.SirilInterface.xy_plot() (#1670)
* Filechoosers in the calibration tab and calibration preferences remember the last directory (#1664)
* Updated overlay_add_polygon() to use shared memory, to handle polygons with large numbers of sides
* Improved compatibility of sirilpy.tkfilebrowser with tkinter.filedialog (allows replacing the awful Linux tk filedialog)
* Improved the GPU module helper methods in sirilpy
* Fixed a crash with RGB compositing (#1562)
* Improved behaviour of histogram stretch after autostretch if the image ICC profile differs from the display profile.
* Changed the default GHT colour mode from human weighed luminance to independent (!899)
* Added / improved GPU helper modules to assist with installation and testing of key GPU-related modules. (!895)
* Allow "Crop Sequence" with the internal sequence used in RGB composition, to aid with LRGB workflows. (!902)
* Add python method to draw Polygons in the Siril overlay.
* Allow opening scripts at a previous revision in case of bad updates. Uses the double click to open functionality of the tree view.
* Make SIP and WCS as protected keywords (#1696)
* Added -followstar to the seqpsf command: previously this could only be set from the GUI. (!905)

siril 1.4.0-beta2
05/21/25

**Fixes:**
* Fixed option -weight= for stack command and add filtering criteria in HISTORY key of stacked image (#1545)
* Fixed crash and slowness when refreshing the scripts list (#1548, #1574)
* Python scripts are now sorted alphabetically (#1559)